--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "react-router-dom": "^6.13.0",
     "typescript-plugin-css-modules": "^5.0.1"
   },
   "scripts": {
